Add stt animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,5 +139,5 @@
   </section>
 
 </div>
-<button class="button scroll-to-top" (click)="scrollToTop()"><i class="material-icons"> keyboard_arrow_up </i></button>
+<button class="button scroll-to-top" id="scroll-to-top" (click)="scrollToTop()"><i class="material-icons"> keyboard_arrow_up </i></button>
 <app-modal id="modal" [ngClass]="{'dark-mode': darkMode}"></app-modal>
