--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -425,4 +425,12 @@
   position: fixed;
   right: 0.5rem;
   bottom: 0.5rem;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  pointer-events: none;
+  
+  &--on {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
