--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,9 @@
   --modal-header-background-color: #fff;
   --details-title-color: #757575;
   --details-value-color: #222;
+  --search-item-label-color: #767676;
+  --overlay-background-color: rgba(0, 0, 0, 0.2);
+
   --font: 'Open Sans', sans-serif;
 }
 
@@ -43,6 +46,9 @@
   --modal-header-background-color: #000;
   --details-title-color: #fff;
   --details-value-color: #fff;
+  --search-item-label-color: #fff;
+  --overlay-background-color: rgba(0, 0, 0, 0.5);
+  
   --font: 'Montserrat', sans-serif;
 }
 
