--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -186,10 +186,18 @@
   &__history-button {
     border: 1px solid var(--form-border-color);
     border-left-width: 0;
+    z-index: 4;
+    position: relative;
+    background-color: var(--header-background-color);
+
+    &--active {
+      border-bottom-color: var(--header-background-color) !important;
+    }
 
     &:hover,
     &:focus {
       border-color: var(--form-border-color);
+      background-color: var(--header-background-color);
     }
   }
 
@@ -357,7 +365,7 @@
 }
 
 .search-history {
-  border: 1px solid var(--primary-border-color);
+  border: 1px solid var(--form-border-color);
   border-top: 0;
   padding: 0.5rem 0 0 0;
   background-color: var(--header-background-color);
@@ -366,6 +374,16 @@
   &__title {
     padding: 0 0.5rem;
     margin-bottom: 0.5rem;
+  }
+
+  &__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background-color: var(--overlay-background-color);
   }
 }
 
@@ -428,7 +446,7 @@
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
   pointer-events: none;
-  
+
   &--on {
     opacity: 1;
     pointer-events: all;
