Add target to portfolio_url

--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -33,7 +33,7 @@
       <div class="item">
         <div class="item__content">
           <dt class="item__title"> Website <i class="material-icons item__icon"> link </i></dt>
-          <dd class="item__value"><a class="item__link link" [href]="image?.user.portfolio_url">{{ image?.user.portfolio_url }}</a>
+          <dd class="item__value"><a class="item__link link" [href]="image?.user.portfolio_url" target="_blank">{{ image?.user.portfolio_url }}</a>
           </dd>
         </div>
       </div>
