--- a/src/app/shared/loader/loader.component.html
+++ b/src/app/shared/loader/loader.component.html
@@ -1,5 +1,5 @@
 <span class="loader" role="alert">
-  <span class="hide-for-user">Loading, please wait</span>
+  <span class="hide-for-user">{{'LOADING_PLEASE_WAIT' | translate}}</span>
   <i class="material-icons loader__icon" aria-hidden="true">
     autorenew
   </i>
