--- a/src/app/search-item/search-item.component.scss
+++ b/src/app/search-item/search-item.component.scss
@@ -116,7 +116,16 @@
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
+    z-index: 1;
 
+    &:hover {
+      color: var(--ornament-color);
+
+      + .star-explain {
+        transform: translateX(-2.5rem);
+        opacity: 1;
+      }
+    }
   }
 
   &__list {
