--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@
   --search-item-label-color: #767676;
   --overlay-background-color: rgba(0, 0, 0, 0.2);
   --ornament-color: #ffa500;
+  --submenu-background-color: #fff;
 
   --font: 'Open Sans', sans-serif;
 }
@@ -50,6 +51,7 @@
   --search-item-label-color: #fff;
   --overlay-background-color: rgba(0, 0, 0, 0.5);
   --ornament-color: #ffa500;
+  --submenu-background-color: #000;
   --font: 'Open Sans', sans-serif;
 }
 
