Visual fixes for dark theme

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -487,6 +487,7 @@
     width: 200px;
     text-align: left;
     cursor: pointer;
+    color: var(--font-color);
 
     &:hover {
       @include gradient-overlay();
