--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,11 +34,11 @@
   --header-background-color: #181818;
   --font-color: #fff;
   --primary-color: #ff4858;
-  --primary-border-color: #ddd;
+  --primary-border-color: #464646;
   --content-background: #464646;
   --search-item-value-color: #dadada;
   --search-item-hover-background: #222;
-  --form-border-color: #fff;
+  --form-border-color: #5b5b5b;
   --icon-color: #fff;
   --button-active-background-color: rgba(255, 255, 255, 0.1);
   --modal-overlay-background-color: rgba(0, 0, 0, 0.7);
