--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,12 +66,12 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+.body {
   font-size: 16px;
   min-height: 100vh;
   overflow-y: scroll;
 
-  &.modal-open {
+  &--modal {
     overflow-y: hidden;
   }
 }
